_masterSatellite: hardening and style correction